fix horizontal scroll bar

--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,10 @@
     padding: 0px;
     box-sizing: border-box;
 }
-.container-class{
+ .container-class{
     width: 80%;
-    /* border: 1px solid orange; */
-   margin: 0 auto
+     border: 1px solid orange; 
+   margin: 0 auto;
 }
 .main-header{
     display: flex;
@@ -48,34 +48,6 @@ margin-right: 10px;
     justify-content: space-between;
 }
 
-
-
-/* .container {
-    width: 80%;
-    margin: 0 auto;
-}
-
-.main-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 5px;
-}
-
-.right-section {
-    display: flex;
-    align-items: center;
-}
-
-.right-section ul {
-    list-style: none;
-    display: flex;
-}
-
-.road-assistance {
-    display: flex;
-    padding-left: 20px;
-} */
 
 .right-section ul li {
     margin-right: 20px;
@@ -297,14 +269,23 @@ color:  #661CE7;
 #brand-served {
     font-size: 48px;
     text-align: center;
-}
+/* }
 #our-customer {
     font-size: 48px;
     text-align: center;
   margin-top: 40px;
 
-}
-.testimony {
+} */
+/* .testimony {
     display: flex;
     justify-content: space-around;
+} */
+
+/* #page-body {
+    width: 100%;
+    border: 1px solid orange;  */
+
 }
+
+
+
